external-crates/move/crates/move-compiler/tests/move_2024/matching/counterexample_1.exp
error[E04026]: non-exhaustive pattern
  ┌─ tests/move_2024/matching/counterexample_1.move:9:16
  │
9 │         match (Option::Some(0)) {
  │                ^^^^^^^^^^^^^^^ Pattern 'Option::None' not covered

error[E04026]: non-exhaustive pattern
   ┌─ tests/move_2024/matching/counterexample_1.move:15:16
   │
15 │         match (opt) {
   │                ^^^ Pattern 'Option::Some(Option::Some(_))' not covered

error[E04026]: non-exhaustive pattern
   ┌─ tests/move_2024/matching/counterexample_1.move:22:16
   │
22 │         match (opt) {
   │                ^^^ Pattern 'Option::None' not covered

